Bug 126540 - EDITING The document remains in not modified state after we switch the View Grid Lines
Summary: EDITING The document remains in not modified state after we switch the View G...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Attila Szűcs
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks: ModifiedStatus
  Show dependency treegraph
 
Reported: 2019-07-25 12:40 UTC by Gabor Kelemen (Collabora)
Modified: 2021-06-10 08:36 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example empty spreadsheet file (6.61 KB, application/vnd.oasis.opendocument.spreadsheet)
2019-07-25 12:40 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the non changed icon (2.40 KB, image/png)
2019-07-25 12:42 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2019-07-25 12:40:43 UTC
Created attachment 152982 [details]
Example empty spreadsheet file

Changing the display of Calc grid lines does not mark the document as modified.

Steps to reproduce:
    1. Create a new spreadsheet with LibreOffice Calc.
    2. Switch the View Grid Lines (Menu → View →  View Grid Lines)
    3. Check the save icon in the icon bar (the floppy icon)
    4. Repeat 2-3 again and again

Actual results: 
The document modified state is not changed, despite this setting can be saved to ODS and XLSX formats as well.

Expected results: 
The document modified state changes.


LibreOffice details:
Version: 6.4.0.0.alpha0+ (x86)
Build ID: 382aceb80d3c0f420d51762e1f88eee2334ff11b
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-07-21_23:45:18
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL

Also happens in:
LibreOffice 3.5.0rc3 
Build ID: 7e68ba2-a744ebf-1f241b7-c506db1-7d53735
Comment 1 Gabor Kelemen (Collabora) 2019-07-25 12:42:15 UTC
Created attachment 152983 [details]
Screenshot of the non changed icon
Comment 2 V Stuart Foote 2019-07-25 14:12:08 UTC
When written the ODF document will hold a boolean value

 <config:config-item config:name="ShowGrid" config:type="boolean">false</config:config-item>

Since it is written into the ODF, modified state probably should be in picked up after a change in "View Grid Lines" (".uno:ToggleSheetGrid").

=-testing-=
Windows 10 Home 64-bit en-US (1903) with
Version: 6.4.0.0.alpha0+ (x86)
Build ID: 382aceb80d3c0f420d51762e1f88eee2334ff11b
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded
Comment 3 Commit Notification 2021-06-01 08:06:35 UTC
Attila Szűcs committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5ead135faaee76bea78f481d7c63d54f56e9098c

tdf#126540 sc: toggling grid lines sets document as modified

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 NISZ LibreOffice Team 2021-06-10 08:36:23 UTC
Verified in: 

Version: 7.2.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: aa9cb8e14749e7fb7a83b55a2bb095501f731a18
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded