tdf#126540 sc: Doc modifies by toggling grid lines

Set the document to modified, when grid lines of a sheet are toggled.

Co-authored-by: Tibor Nagy (NISZ)
Change-Id: Ifcee59d27fbe0bb50b9fe99e16c70e2062a714f6